Correct lack of momentum scrolling on iOS.

--- a/resources/public/toto.css
+++ b/resources/public/toto.css
@@ -76,7 +76,8 @@ div#contents {
     background: white;
 
     height: 100%;
-    overflow-y: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 
     padding-top: 2.75em;
 }
